# carta-backend

./: .gitignore
carta-scripting-grpc/: CMakeLists.txt  README.md  build_python.sh  carta_service.proto
debian/: README.Debian  carta-backend.install  changelog  control  copyright  rules
debian/patches/: End-Of-File-Char.patch
src/SessionManager/: ProgramSettings.cc
